[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/slime/body.png" type="Texture" id=2]
[ext_resource path="res://assets/slime/slime_eye.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37.8224, 41.1483 )

[sub_resource type="Animation" id=2]
resource_name = "death"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("eye:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -180.0 ]
}

[node name="player" type="RigidBody2D"]
collision_layer = 3
collision_mask = 3
gravity_scale = 4.0
script = ExtResource( 1 )

[node name="body" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="eye" type="Sprite" parent="."]
position = Vector2( 6.5529, 20.998 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )
hframes = 2
frame = 1

[node name="collision_shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.0101, 21.5086 )
scale = Vector2( 2.48291, 2.25875 )
[connection signal="body_entered" from="." to="." method="_on_player_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_player_screen_exited"]
